--- a/package.json
+++ b/package.json
@@ -1,24 +1,42 @@
 {
-  "name": "portfolio",
-  "version": "0.1.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/DarkAnfi/portfolio.git"
-  },
-  "keywords": [
-    "portfolio",
-    "software",
-    "development"
-  ],
-  "author": "Andrés Flores",
-  "license": "GPL-3.0-or-later",
-  "bugs": {
-    "url": "https://github.com/DarkAnfi/portfolio/issues"
-  },
-  "homepage": "https://github.com/DarkAnfi/portfolio#readme"
+    "name": "portfolio",
+    "version": "0.1.0",
+    "description": "",
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/DarkAnfi/portfolio.git"
+    },
+    "keywords": [
+        "portfolio",
+        "software",
+        "development"
+    ],
+    "author": "Andrés Flores",
+    "license": "GPL-3.0-or-later",
+    "bugs": {
+        "url": "https://github.com/DarkAnfi/portfolio/issues"
+    },
+    "homepage": "https://github.com/DarkAnfi/portfolio#readme",
+    "dependencies": {
+        "react": "^18",
+        "react-dom": "^18",
+        "next": "13.5.4"
+    },
+    "devDependencies": {
+        "typescript": "^5",
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "autoprefixer": "^10",
+        "postcss": "^8",
+        "tailwindcss": "^3",
+        "eslint": "^8",
+        "eslint-config-next": "13.5.4"
+    }
 }
